--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT ME</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">RESUME</h1>
-    <h2> INTRODUCTION</h2>
-    <p>I am sridevi from kurnool. l am currently pursuing my graduation on cse-AI in GPCET .l am good at programming languages like python ,java Now l am learning development course to improve my skills.l have done projects related to AI domain like facial emoji recognisation and text summarisation using nlp </p>
-    <img src="IMG-20241110-WA0024.jpg" ,height=150, width=150>
+    <div class="main">
+    <h1 id="header",align="center">RESUME</h1>
+    <h2 id="header1"> INTRODUCTION</h2>
+    <p id="para">I am sridevi from kurnool. l am currently pursuing my graduation on cse-AI in GPCET .l am good at programming languages like python ,java Now l am learning development course to improve my skills.l have done projects related to AI domain like facial emoji recognisation and text summarisation using nlp </p>
+    <img src="IMG-20241110-WA0024.jpg" ,id="im">
     <br>
-    <p>Name:<input placeholder,type=text></p>
-    <p>Email:<input placeholder,type=email></p>
-    <button>Submit</button>
-    <footer align="center" >THANK YOU</footer>
+    <div id="input">
+    <label>Name:<input placeholder="name",type=text></label>
+    <label>Email:<input placeholder,type=email></label>
+    </div>
+    <button id="click">Submit</button>
+    <footer id="end">THANK YOU</footer>
+    </div>
 </body>
 
 </html>
